salesforce/force-app/main/default/objects/Bottle_Packaging__c/Bottle_Packaging__c.object-meta.xml
<CustomObject>
    <description>Bottle packaging component details per size</description>
    <label>Bottle Packaging</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bottle Packagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>