salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Binding_Index__c.field-meta.xml
<CustomField>
    <fullName>Binding_Index__c</fullName><label>Binding Index</label><precision>5</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>