salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName><label>Category</label><length>200</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>