salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Component_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Code__c</fullName><label>Component Code</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>