salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <referenceTo>Formula__c</referenceTo>
    <relationshipLabel>Bottle Packagings</relationshipLabel>
    <relationshipName>Bottle_Packagings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>