salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName><defaultValue>false</defaultValue><label>Is Default</label><trackHistory>false</trackHistory><type>Checkbox</type>
</CustomField>