salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName><label>Material Name</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>