salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Size_Count__c.field-meta.xml
<CustomField>
    <fullName>Size_Count__c</fullName><label>Size Count</label><precision>10</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>