salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName><label>Unit Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>