salesforce/force-app/main/default/objects/Bottle_Packaging__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName><label>Vendor Name</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique>
</CustomField>